# magicgui

./: .coveragerc  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  ComboBox.current_index_demo.py  LICENSE  MANIFEST.in  MagicGuiTesting.py  README.md  codecov.yml  example.py  footer.html  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pyrightconfig.json  requirements_dev.txt  select_widget_demo.py  setup.cfg  setup.py  sitemap.xml  tox.ini  x.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  --feature-request.md  -question-help-support.md  bug_report.md
.github/workflows/: deploy_docs.yml  test_and_deploy.yml
CONTRIBUTING/: index.html
_mk_docs/: index.md
_mk_docs/custom_theme/: 404.html
_mk_docs/examples/: napari_img_math.md
api/app/: index.html
api/experimental/: index.html
api/magic_factory/: index.html
api/magicgui/: index.html
api/migration/: index.html
api/protocols/: index.html
api/type_map/: index.html
api/widgets/: index.html
assets/: _mkdocstrings.css
capstone_demos/: ComboBox.current_index_demo.py  MagicGuiTesting.py  label_demo.py  select_widget_demo.py  slider_step_demo.py
dataclasses/: index.html
decorators/: index.html
docs/: CONTRIBUTING.md  README.md  _config.yml  _gen_widgets.py  _hooks.py  _toc.yml  bases.md  compare.md  configuration.md  dataclasses.md  decorators.md  events.md  example.md  gallery_conf.py  index.md  installation.md  markdown.md  notebooks.ipynb  patch.py  protocols.md  requirements.txt  thoughts.md  type_inference.md  type_map.md  widget_overview.md  widgets.md  widgets_overview.md
docs/_static/: styles.css
docs/_templates/: layout.html  localtoc.html  relbar.html  sidebar.html
docs/api/: app.md  bases.md  experimental.md  function_gui.md  magic_factory.md  magicgui.md  migration.md  protocols.md  type_map.md  types.md  v0_2_0.md  v0_3_0.md  widgets.md
docs/basics/: configuration.md  type_inference.md
docs/custom_theme/: 404.html
docs/examples/: README.md  basic.md  basic_example.py  basic_widgets_demo.py  hotdog.py  magicgui_jupyter.py  napari_img_math.md  napari_parameter_sweep.md  napari_parameter_sweep.py  widget_demo.md
docs/intro/: configuration.md  installation.md
docs/scripts/: _gen_screenshots.py  _gen_widgets.py  _hooks.py
docs/stylesheets/: extra.css  pygments.css
docs/usage/: configuration.md  direct_api.md  installation.md  main_window.md  quickstart.md  types_widgets.md  widget_overview.md
events/: index.html
examples/: OLD_napari_image_arithmetic.py  OLD_napari_param_sweep.py  OLD_snells_law.py  basic.py  basic2.py  callable.py  chaining.py  change_label.py  choices.py  class_method.py  file_dialog.py  forward_refs.py  function_call.py  gui_model.py  hard_funcs.py  image.py  log_slider.py  login.py  magicgui_jupyter.ipynb  main_window.py  mpl_figure.py  napari_forward_refs.py  napari_image_arithmetic.py  napari_param_sweep.py  napari_viewer.py  optional.py  pint_quantity.py  progress.py  progress_indeterminate.py  progress_manual.py  progress_nested.py  pydantic_model.py  pydantic_types.py  range_slider.py  selection.py  self_reference.py  snells_law.py  table.py  values_dialog.py  waveform.py  (+2 more)
examples/basic/: index.html
examples/napari_img_math/: index.html
examples/napari_parameter_sweep/: index.html
generated_examples/: basic_example.ipynb  basic_example.py.md5  basic_example_codeobj.pickle  basic_widgets_demo.ipynb  basic_widgets_demo.py.md5  basic_widgets_demo_codeobj.pickle  index.html
generated_examples/applications/: callable.ipynb  callable.py.md5  callable_codeobj.pickle  chaining.ipynb  chaining.py.md5  chaining_codeobj.pickle  hotdog.ipynb  hotdog.py.md5  hotdog_codeobj.pickle  pint_quantity.ipynb  pint_quantity.py.md5  pint_quantity_codeobj.pickle  snells_law.ipynb  snells_law.py.md5  snells_law_codeobj.pickle  values_dialog.ipynb  values_dialog.py  values_dialog.py.md5
generated_examples/basic_example/: index.html
generated_examples/basic_widgets_demo/: index.html
generated_examples/demo_widgets/: change_label.ipynb  change_label.py.md5  change_label_codeobj.pickle  choices.ipynb  choices.py.md5  choices_codeobj.pickle  directory_dialog.ipynb  directory_dialog.py.md5  directory_dialog_codeobj.pickle  file_dialog.ipynb  file_dialog.py.md5  file_dialog_codeobj.pickle  files_dialog.ipynb  files_dialog.py  files_dialog.py.md5  files_dialog_codeobj.pickle  image.ipynb  image.py  image.py.md5  image_codeobj.pickle  log_slider.ipynb  log_slider.py.md5  log_slider_codeobj.pickle  login.ipynb  login.py.md5  login_codeobj.pickle  optional.ipynb  optional.py  optional.py.md5  optional_codeobj.pickle  range_slider.ipynb  range_slider.py  range_slider.py.md5  (+7 more)
installation/: index.html
magicgui/: __init__.py  __main__.py  _coreOLD.py  _gui_model.py  _guiclass.py  _guimodel.py  _image.py  _magicgui.py  _magicgui.pyi  _mpl_image.py  _notes.py  _parse.py  _pydantic.py  _qt.py  _schema.py  _schema2.py  _sentinal.py  _tqdm.py  _type_resolution.py  _type_wrapper.py  _ui_field.py  _util.py  _version.py  application.py  base.py  bases.py  constants.py  container.py  core.py  decorator.py  event.py  events.py  function_gui.py  guimodel.py  layout.py  magicgui.py  parse.py  protocols.py  return_map.py  signature.py  (+10 more)
requirements/: base.txt  dev.txt  docs.txt  tests.txt
scripts/: _gen_widgets.py
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_ qt.py  test_BSU_CAPSTONE.py  test_application.py  test_backends.py  test_container.py  test_deprecations.py  test_docs.py  test_events.py  test_examples.py  test_factory.py  test_future.py  test_gui_class.py  test_guimodel.py  test_image.py  test_magicgui.py  test_main_window.py  test_new_code.py  test_persistence.py  test_return_widgets.py  test_signature.py  test_table.py  test_tqdm.py  test_types.py  test_ui_field.py  test_util.py  test_widget_bases.py  test_widgets.py
type_map/: index.html
typesafety/: test_decorator_types.yml
widgets/: index.html
(+300 files in other folders)
