[metadata]
name = magicgui
url = https://github.com/napari/magicgui
download_url = https://github.com/napari/magicgui
license = MIT license
license_file = LICENSE
description = build GUIs from functions, using magic
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Talley Lambert
author_email = talley.lambert@gmail.com
keywords = gui, magicgui, widgets
project_urls =
    Documentation = https://napari.org/magicgui
    Source = https://github.com/napari/magicgui
    Tracker = https://github.com/napari/magicgui/issues
    Changelog = https://github.com/napari/magicgui/blob/master/CHANGELOG.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Desktop Environment
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
  setuptools_scm
install_requires =
    docstring_parser
    qtpy>=1.7.0
    typing_extensions


[options.extras_require]
pyside2 =
    pyside2>=5.13 ; python_version=='3.7'
    pyside2>=5.14 ; python_version=='3.8'
    pyside2>=5.15 ; python_version=='3.9'
pyqt5 =
    pyqt5>=5.12.0
tqdm =
    tqdm>=4.30.0
image =
    pillow>=4.0
testing =
    tox
    tox-conda
    pytest
    pytest-qt
    pytest-cov
    pytest-mypy-plugins
    numpy
    pandas ; python_version>'3.7'
    %(tqdm)s
    %(image)s
    matplotlib
dev =
    ipython
    jedi<0.18.0
    black==20.8b1
    flake8==3.8.4
    flake8-docstrings
    isort==5.7.0
    mypy==0.800
    pre-commit
    pydocstyle
    %(testing)s
    %(pyqt5)s

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503
per-file-ignores =
    magicgui/events.py:D
    tests/*.py:D
    magicgui/backends/_qtpy/*.py:D

[aliases]
test = pytest

[pydocstyle]
match_dir = magicgui
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -v -W error --mypy-ini-file=setup.cfg

[mypy]
files = magicgui
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
# pretty = True

[mypy-.examples/,magicgui._mpl_image.*]
ignore_errors = True

[mypy-.examples,numpy.*,_pytest.*,packaging.*,importlib_metadata.*,docstring_parser.*]
ignore_errors = True


[isort]
profile = black
src_paths=magicgui
