[metadata]
name = magicgui
url = https://github.com/napari/magicgui
download_url = https://github.com/napari/magicgui
license = MIT license
license_files = LICENSE
description = build GUIs from functions, using magic
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Talley Lambert
author_email = talley.lambert@gmail.com
keywords = gui, magicgui, widgets
project_urls =
    Documentation = https://napari.org/magicgui
    Source = https://github.com/napari/magicgui
    Tracker = https://github.com/napari/magicgui/issues
    Changelog = https://github.com/napari/magicgui/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Desktop Environment
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm
install_requires =
    docstring_parser
    psygnal>=0.3.1
    qtpy>=1.7.0
    superqt>=0.4.0
    typing_extensions

[options.packages.find]
exclude =
    tests

[options.package_data]
magicgui =
    py.typed
    *.pyi

[options.extras_require]
pyside2 =
    pyside2>=5.14 ; python_version=='3.8'
    pyside2>=5.15 ; python_version>='3.9'
pyqt5 =
    pyqt5>=5.12.0
pyqt6 =
    pyqt6
pyside6 =
    pyside6<6.4.0
tqdm =
    tqdm>=4.30.0
jupyter =
    ipywidgets>=7.5.0
image =
    pillow>=4.0
testing =
    tox
    pytest
    pytest-qt
    pytest-cov
    pytest-mypy-testing
    numpy
    pandas
    %(tqdm)s
    %(image)s
    matplotlib
    toolz
    ipywidgets
dev =
    ipython
    black
    flake8
    flake8-docstrings
    flake8-typing-imports
    isort
    mypy
    pre-commit
    pydocstyle
    tox-conda
    %(testing)s
    %(pyqt5)s

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503
per-file-ignores =
    magicgui/events.py:D
    tests/*.py:D
    magicgui/backends/*/*.py:D
    magicgui/_type_wrapper.py:D

[aliases]
test = pytest

[pydocstyle]
match_dir = magicgui
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -v
filterwarnings =
    error
    ignore::DeprecationWarning:qtpy
    ignore:distutils Version classes are deprecated
    ignore:path is deprecated:DeprecationWarning

[mypy]
files = magicgui
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = False
show_error_codes = True
ignore_missing_imports = True
# pretty = True

[mypy-.examples/,magicgui._mpl_image.*,magicgui.backends._qtpy.widgets.*]
ignore_errors = True

[mypy-.examples,numpy.*,_pytest.*,packaging.*,pyparsing.*,importlib_metadata.*,docstring_parser.*,psygnal.*,qtpy.*,imageio.*,ipywidgets.*]
ignore_errors = True

[mypy-tomli.*]
warn_unused_ignores = False

[isort]
profile = black
src_paths=magicgui

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    \.\.\.
    except ImportError*
    raise NotImplementedError()
    pass
omit =
    magicgui/events.py
    magicgui/_mpl_image.py
    tests/*
